--- a/src/.env
+++ b/src/.env
@@ -1,2 +1,3 @@
 # Tokens
-DISCORD_TOKEN=
+DISCORD_TOKEN="MTIzNjY3MDAyODU0MDAyMjkxNQ.GhJbkf.0qeuYZxgWBpNMnCr150rT0PIAef_bAumHnsYKw"
+SERVER_ID="1222965742538850304"
