--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@sapphire/utilities": "^3.15.3",
     "@skyra/env-utilities": "^1.3.0",
     "colorette": "^2.0.20",
-    "discord.js": "^14.14.1"
+    "discord.js": "^14.14.1",
+    "node-cron": "^3.0.3"
   },
   "devDependencies": {
     "@sapphire/cli": "^1.9.3",
