--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@sapphire/plugin-logger": "^4.0.2",
     "@sapphire/utilities": "^3.15.3",
     "@skyra/env-utilities": "^1.3.0",
+    "@types/node-cron": "^3.0.11",
     "colorette": "^2.0.20",
     "discord.js": "^14.14.1",
     "node-cron": "^3.0.3"
